RESOLVED FIXED97908
[Qt][WK2] Device pixel ratio lost upon relaunch of the web process
https://bugs.webkit.org/show_bug.cgi?id=97908
Summary [Qt][WK2] Device pixel ratio lost upon relaunch of the web process
Andras Becsi
Reported 2012-09-28 06:47:08 PDT
[Qt][WK2] Custom device scale factor lost upon relaunch of the web process
Attachments
Patch (2.68 KB, patch)
2012-09-28 06:47 PDT, Andras Becsi
no flags
Patch (1.97 KB, patch)
2012-10-01 05:15 PDT, Andras Becsi
no flags
Andras Becsi
Comment 1 2012-09-28 06:47:45 PDT
Jocelyn Turcotte
Comment 2 2012-10-01 02:21:36 PDT
By looking at bug #67150 it seems that the issue is that the custom scale factor was designed to only be used temporary. Could you try using setIntrinsicDeviceScaleFactor instead of setCustomDeviceScaleFactor and see if that solves the issue? It seems like we ended up using it after bug #89272 but should have been using the intrinsic one at this point.
Andras Becsi
Comment 3 2012-10-01 05:14:57 PDT
(In reply to comment #2) > By looking at bug #67150 it seems that the issue is that the custom scale factor was designed to only be used temporary. > Could you try using setIntrinsicDeviceScaleFactor instead of setCustomDeviceScaleFactor and see if that solves the issue? > > It seems like we ended up using it after bug #89272 but should have been using the intrinsic one at this point. Indeed, for the QML use-case using setIntrinsicDeviceScaleFactor seems to be the correct solution. Although, as a side note, nonetheless of the custom scale factor being a temporal value, it still feels odd that when set it is not restored when the web process crashes.
Andras Becsi
Comment 4 2012-10-01 05:15:59 PDT
Andras Becsi
Comment 5 2012-10-01 07:12:43 PDT
Comment on attachment 166454 [details] Patch Clearing flags on attachment: 166454 Committed r130045: <http://trac.webkit.org/changeset/130045>
Andras Becsi
Comment 6 2012-10-01 07:12:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.