[Qt][WK2] Device pixel ratio lost upon relaunch of the web process https://bugs.webkit.org/show_bug.cgi?id=97908

Reviewed by Jocelyn Turcotte.

Use setIntrinsicDeviceScaleFactor instead of setCustomDeviceScaleFactor
when setting the device pixel ratio to make the setting permanent.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::didRelaunchProcess):
(QQuickWebViewExperimental::setDevicePixelRatio):

git-svn-id: svn://svn.chromium.org/blink/trunk@130045 bbb929c8-8fbe-4397-9dbb-9b2b20218538